--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Soyeon Baik</h1>
-            <h2>[so-yuhn bak]</h2>
+            <h2>[so-yuhn bek]</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I love games.
                     </p>
                 </div>
             </div>
@@ -86,29 +84,22 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2018 – May 2021">
+                <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
+                <h4>CRM Marketing Manager</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="January 2016 – May 2018">
+                <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
+                <h4>Junior Product Manager</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
         </div>
     </div>
     <!-- End #experience -->
@@ -117,27 +108,42 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Purdue University</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <span class="education-date">June 2021 - May 2022</span>
+            <h4>Master of Science in Business Analytics & Information Management</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+              Learned how to frame real-world cases in to business/data problem, how to explore/navigate/solve those problem using multiple tools, and suggest them with the best possible solution
+            </p><br>
+            <ul>
+                <li>
+                    Data Mining ─ Data Preprocessing, Model selection & Comparison (SAS Enterprise Miner)
+                </li>
+                <li>
+                    R for Analytics ─ EDA, Predictive Modeling (R; shiny, h2o, ggplot2, caret, dplyr)
+                </li>
+                <li>
+                    Web Data Analytics ─ Web Scraping, A/B Testing (Python; BeautifulSoup, Selenium, Scrapy, statsmodels)
+                </li>
+                <li>
+                    Analyzing Unstructured Data ─ Text/Image representation (Python; NLTK, gensim, scikit-learn, scipy) <!--pillow-->
+                </li>
+
+            </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Chung-Ang University (Seoul, Korea)</h3>
+            <span class="education-date">March 2012 - February 2016</span>
+            <h4>Bachelor of Business Administration ─ <em>Cum Laude</em></h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Core 1: Quantitative Marketing, Marketing Research & Analysis, Product Management
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Core 2: Operation Management, Supply Chain Management, Management Science
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Core 3: Financial Time Series, Behavioral Finance, Investment Analysis
                 </li>
             </ul>
         </div>
@@ -155,11 +161,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>SAS·Python | Water Usage Optimization</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            This project is to find the optimal amount of water usage under the given constraints using optimization model in SAS.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://samarsault.com/texture/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -188,32 +194,15 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>R</li>
+            <li>SAS</li>
+            <li>Minitab</li>
+            <li>Tableau</li>
+            <li>MySQL</li>
+            <li>Google Analytics</li>
+            <li>Google Cloud BigQuery</li>
+            <li>Google Data Studio</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -237,7 +226,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> SOYEON BAIK
                     </p>
                 </div>
                 <div class="col-sm-2 top">
