--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Hi, I'm Soyeon</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="style_jekeyl.css" rel="stylesheet">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
         <div id="lead-content">
             <h1>Soyeon Baik</h1>
             <h2>[so-yuhn bek]</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://docs.google.com/uc?export=download&id=1QYgSnRoxf3jpZciDhxzIT4c8ZiIYRzPR" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,7 +74,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I love games.
+                        Hi, I'm Soyeon. Here's something that I love - travel, game, data
                     </p>
                 </div>
             </div>
@@ -88,7 +89,7 @@
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
                 <h4>CRM Marketing Manager</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    .
                 </p>
             </div>
 
@@ -96,7 +97,7 @@
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
                 <h4>Junior Product Manager</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    .
                 </p>
             </div>
 
@@ -115,10 +116,10 @@
             </p><br>
             <ul>
                 <li>
-                    Data Mining ─ Data Preprocessing, Model selection & Comparison (SAS Enterprise Miner)
+                    R for Analytics ─ EDA, Predictive Modeling (R; shiny, h2o, ggplot2, caret, dplyr)
                 </li>
                 <li>
-                    R for Analytics ─ EDA, Predictive Modeling (R; shiny, h2o, ggplot2, caret, dplyr)
+                    Data Mining ─ Data Preprocessing, Model selection & Comparison (SAS Enterprise Miner)
                 </li>
                 <li>
                     Web Data Analytics ─ Web Scraping, A/B Testing (Python; BeautifulSoup, Selenium, Scrapy, statsmodels)
@@ -155,15 +156,99 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+              <div class="project shadow-large">
+                  <div class="project-image">
+                      <img src="images/water.jpg" />
+                  </div>
+                  <!-- End .project-image -->
+                  <div class="project-info">
+                      <p>SAS · Python<br>| Prediction, Optimization |</p>
+                      <h3>Water Usage Optimization</h3>
+                      <p>
+                          What would be the optimal amount of water that should be purchased or used from the water tank based on the predicted water usage? This project is to find the best option that minimizes the cost under the given constraints using the optimization model in SAS.
+                      </p>
+                      <a href="sas.html">View Project</a>
+                  </div>
+                  <!-- End .project-info -->
+              </div>
+              <!-- End .project -->
+
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/game.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>SAS·Python | Water Usage Optimization</h3>
+                        <p>Python<br>| Text Representation, Model Training | </p>
+                        <h3>Video Game Classification</h3>
                         <p>
-                            This project is to find the optimal amount of water usage under the given constraints using optimization model in SAS.
+                            Finding what you need in craigslist is not easy sometimes. Using text classification and machine-learning library, we improved the search results in craigslists.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/youtube.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <p>Python<br>| Web Scraping(API), Hypothesis Testing |</p>
+                        <h3>Youtube Contents Analysis</h3>
+                        <p>
+                            What are the common features of trending videos on Youtube? We scraped data from youtube and analyzed what components make the videos trendy.
+                        </p>
+                        <a href="index_post.html">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/credit.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <p>SAS<br>| Predictive Analytics, Model Selection |</p>
+                        <h3>Credit Default Prediction</h3>
+                        <p>
+                            .
+                        </p>
+                        <a href="https://samarsault.com/texture/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/button.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <p>R<br>| EDA, Model Building, Predictive Analytics |</p>
+                        <h3>Youtube Trending Prediction</h3>
+                        <p>
+                            We predicted whether the specific contents will be on trends or not by using Machine Learning based application and made the user-interactive dashboards on the shinyApp.
+                        </p>
+                        <a href="https://samarsault.com/texture/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/hulu.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <p>Python<br>| EDA, Data Visualization |</p>
+                        <h3>Streaming Service Analysis</h3>
+                        <p>
+                            Live streaming platforms introduce new contents every month. By analyzing Hulu and competitor, we recommend Hulu on what type of movies to launch in the coming months.
                         </p>
                         <a href="https://samarsault.com/texture/">View Project</a>
                     </div>
@@ -171,38 +256,47 @@
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
             </div>
         </div>
     </div>
     <!-- End #projects -->
 
     <div id="skills">
+        <h2 class="heading">Tools</h2>
+        <ul>
+          <li>Python</li>
+          <li>R</li>
+          <li>SAS</li>
+          <li>MySQL</li>
+          <li>Excel & VBA</li>
+          <li>SPSS</li>
+          <li>Minitab</li>
+          <li>Tableau</li>
+          <li>Google Analytics</li>
+          <li>Google Cloud BigQuery</li>
+          <li>Google Data Studio</li>
+        </ul>
+        <br><br>
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>Python</li>
-            <li>R</li>
-            <li>SAS</li>
-            <li>Minitab</li>
-            <li>Tableau</li>
-            <li>MySQL</li>
-            <li>Google Analytics</li>
-            <li>Google Cloud BigQuery</li>
-            <li>Google Data Studio</li>
+            <li>Exploratory Data Analysis</li>
+            <li>Prescriptive Analytics</li>
+            <li>Prediction</li>
+            <li>Forecasting</li>
+            <li>Text Analytics</li>
+            <li>Image Analytics</li>
+            <li>Web Data Analytics</li>
+            <li>API</li>
+            <li>Web Scraping</li>
+            <li>A/B Testing</li>
+            <li>Hypothesis Testing</li>
+            <li>Data Mining</li>
+            <li>Model Building</li>
+            <li>Optimization</li>
+            <li>Data Visualization</li>
+            <li>Digital Marketing</li>
+            <li>Supply Chain Management</li>
+            <li>Project Management</li>
         </ul>
     </div>
     <!-- End #skills -->
