--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         <p>
                             Live streaming platforms introduce new contents every month. By analyzing Hulu and competitor, we recommend Hulu on what type of movies to launch in the coming months.
                         </p>
-                        <a href="https://samarsault.com/texture/">View Project</a>
+                        <a href='portfolio/hulu.html'>View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
