--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <p>
                             Finding what you need in craigslist is not easy sometimes. Using text classification and machine-learning library, we improved the search results in craigslists.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="portfolio/aud.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -250,7 +250,7 @@
                         <p>
                             Live streaming platforms introduce new contents every month. By analyzing Hulu and competitor, we recommend Hulu on what type of movies to launch in the coming months.
                         </p>
-                        <a href='portfolio/hulu.html'>View Project</a>
+                        <a href="portfolio/hulu.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
