--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                       <p>
                           What would be the optimal amount of water that should be purchased or used from the water tank based on the predicted water usage? This project is to find the best option that minimizes the cost under the given constraints using the optimization model in SAS.
                       </p>
-                      <a href="sas.html">View Project</a>
+                      <a href="https://github.com/paul46186/SAS-Optimization-Challenge">View Project</a>
                   </div>
                   <!-- End .project-info -->
               </div>
