--- a/portfolio/hulu.html
+++ b/portfolio/hulu.html
@@ -26,11 +26,11 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Problem Statement</h2>
-                        <p class="lead">Description</p>
-                        <ul>
+                        <p class="lead">Every month, Hulu introduces new content to keep current customers and engage future customers. This project is to analyze hulu and its competitor's data, including when films were made, which age groups were targeted, the runtime of films, etc. and advise Hulu on what type of movies to launch in the coming months. </p>
+                        <!-- <ul>
                             <li>Bullet Point</li>
                             Without bullet point
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
@@ -40,8 +40,14 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Piece of code here</h2>
-                        <p class="lead">Your text here.</font></p>
+                        <h2>Background & Key Question</h2>
+                        <p class="lead">We used the dataset from the <a href="https://www.kaggle.com/basawanayyahiremath/eda-moviesonstreamingplatforms/data">Kaggle</a>
+                          and here are some questions that we have.<br>
+                          <br>   ▪ Which genres were most highly rated in 2020?
+                          <br>   ▪ Which age groups have the highest number of highly rated movies?
+                          <br>   ▪ Which years have the highest number of highly rated movies?
+                          <br>   ▪ Which runtimes have the highest IMDb scores?
+                        </font></p>
                     </div>
                 </div>
             </div>
@@ -51,8 +57,15 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Contact us</h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                        <h2>Exploratory Data Analysis</h2>
+                        <p class="lead">Here are some exploratory analysis that we did based on the dataset.</p>
+                        <br> <img src="hulu_agegroup.jpg" width="700";>
+                        <br> <img src="hulu_genre.jpg" width="700";>
+                        <br> <img src="hulu_director.jpg" width="700";>
+                        <br> <img src="hulu_runtime.jpg" width="700";>
+                        <br> <img src="hulu_decisiontree.jpg" width="700";>
+
+                        <br> To see more about code, please visit <a href="">here</a>.
                     </div>
                 </div>
             </div>
