--- a/portfolio/aud.html
+++ b/portfolio/aud.html
@@ -26,7 +26,16 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Problem Statement</h2>
-                        <p class="lead">Every month, Hulu introduces new content to keep current customers and engage future customers. This project is to analyze hulu and its competitor's data, including when films were made, which age groups were targeted, the runtime of films, etc. and advise Hulu on what type of movies to launch in the coming months. </p>
+                        <p class="lead"> Craigslist is an online platform connecting buyers to sellers.
+                          It facilitates the sale of many goods and generates revenue by charging a fee on select postings and through paid posting accounts.
+                          <br><br> Craigslist heavily depends on users returning to its website to increase engagement.
+                          If engagement on its site goes up, Craigslist can charge paid posting accounts higher amounts.
+                          Thus, it would be in their best interest to maximize the number of users on their website, or increase the amount of time
+                          users spend on Craigslist. An effective way of improving users’ time on a page is by improving their experience.
+                          That being said, in the video gaming category, there are several problems that needs improvement: general clutter,
+                          inconsistent filtering results, and highly specific filtering options. This project is for enhancing user experience in the
+                          video gaming section by solving the problems.</p>
+
                         <!-- <ul>
                             <li>Bullet Point</li>
                             Without bullet point
@@ -40,9 +49,12 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Piece of code here</h2>
-                        <p class="lead">Your text here.</font></p>
-                    </div>
+                        <h2>Data Preparation - Web Scraping & Preprocessing</h2>
+                        <p class="lead">
+                        Beautiful soup package is used to scrap the data from the craiglist.
+                        <br><br> <img src="bs.jpg" width="700";>
+                      </font></p>
+                      <br> <br>
                 </div>
             </div>
         </section>
@@ -51,8 +63,12 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Contact us</h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                        <h2>Model Building</h2>
+                        <p class="lead">
+                          Six models are used to identify and classify the video game postings into different brand categories
+                           ─ Naive Bayes, Logistic Regression, Random Forest, Support Vector Classifier, Neural Network, and Recurring Neural Network
+                          <br><br> <img src="aud_model.png" width="700";>
+                          </p>
                     </div>
                 </div>
             </div>
