--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, I'm Soyeon. Here's something that I love - travel, game, data
+                        Hi, I'm Soyeon. <br>
+			I'm originally from South Korea and currently doing my study at Purdue University.
                     </p>
                 </div>
             </div>
