--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
         <div id="experience-timeline">
             <div data-date="June 2018 – May 2021">
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
-                <h4>CRM Marketing Manager</h4>
+                <h4>Marketing Project Manager</h4>
                 <p>
-                    .
+                    Marketing Project Management <br>
+		    Customer Analysis <br>
+		    Business Intelligence Reporting <br>
                 </p>
             </div>
 
@@ -98,7 +100,9 @@
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
                 <h4>Junior Product Manager</h4>
                 <p>
-                    .
+                    Brand Strategy Development <br>
+		    Product Management <br>
+		    Supply Chain Management <br>
                 </p>
             </div>
 
