--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
                 <h4>Marketing Project Manager</h4>
                 <p>
-                    Marketing Project Management <br>
-		    Customer Analysis <br>
-		    Business Intelligence Reporting <br>
+                    ▪ Marketing Project Management <br>
+		    ▪ Customer Analysis <br>
+		    ▪ Business Intelligence Reporting <br>
                 </p>
             </div>
 
-            <div data-date="January 2016 – May 2018">
+            <div data-date=" ">
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
                 <h4>Junior Product Manager</h4>
                 <p>
-                    Brand Strategy Development <br>
-		    Product Management <br>
-		    Supply Chain Management <br>
+                    ▪ Brand Strategy Development <br>
+		    ▪ Product Management <br>
+		    ▪ Supply Chain Management <br>
                 </p>
             </div>
 
