--- a/index.html
+++ b/index.html
@@ -194,30 +194,31 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-
+<!--
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/youtube.jpg" />
                     </div>
                     <!-- End .project-image -->
-                    <div class="project-info">
+<!--                    <div class="project-info">
                         <p>Python<br>| Web Scraping(API), Hypothesis Testing |</p>
                         <h3>Youtube Contents Analysis</h3>
                         <p>
                             What are the common features of trending videos on Youtube? We scraped data from youtube and analyzed what components make the videos trendy.
                         </p>
                         <a href="index_post.html">View Project</a>
-                    </div>
+                    </div> -->
+		    
                     <!-- End .project-info -->
-                </div>
+<!--                </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
+<!--                <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/credit.jpg" />
                     </div>
                     <!-- End .project-image -->
-                    <div class="project-info">
+<!--                    <div class="project-info">
                         <p>SAS<br>| Predictive Analytics, Model Selection |</p>
                         <h3>Credit Default Prediction</h3>
                         <p>
@@ -225,8 +226,9 @@
                         </p>
                         <a href="https://samarsault.com/texture/">View Project</a>
                     </div>
+-->
                     <!-- End .project-info -->
-                </div>
+<!--                </div> -->
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
@@ -239,7 +241,7 @@
                         <p>
                             We predicted whether the specific contents will be on trends or not by using Machine Learning based application and made the user-interactive dashboards on the shinyApp.
                         </p>
-                        <a href="https://samarsault.com/texture/">View Project</a>
+                        <a href="https://prerakpatel.shinyapps.io/Youtrends/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
