--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="June 2018 – May 2021">
+            <div data-date=" May 2021">
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
                 <h4>Marketing Project Manager</h4>
                 <p>
@@ -96,7 +96,7 @@
                 </p>
             </div>
 
-            <div data-date=" ">
+            <div data-date="2016 January ">
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
                 <h4>Junior Product Manager</h4>
                 <p>
