--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </p>
             </div>
 
-            <div data-date="2016 January ">
+            <div data-date="January 2016">
                 <h3>Kolon Industries, InC - Fashion & Culture Division</h3>
                 <h4>Junior Product Manager</h4>
                 <p>
