--- a/portfolio/aud.html
+++ b/portfolio/aud.html
@@ -73,6 +73,20 @@
                 </div>
             </div>
         </section>
+        <!-- Code section-->
+        <section class="bg-light" id="services">
+            <div class="container px-4">
+                <div class="row gx-4 justify-content-center">
+                    <div class="col-lg-8">
+                        <h2>Git hub code</h2>
+                        <p class="lead">
+                        <a href="https://github.com/Soyeon-Baik/craigslist">Go to GitHub</a>
+                        <br><br> <img src="bs.jpg" width="700";>
+                      </font></p>
+                      <br> <br>
+                </div>
+            </div>
+        </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Soyeon Baik 2021</p></div>
