--- a/portfolio/aud.html
+++ b/portfolio/aud.html
@@ -78,9 +78,9 @@
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        
-                        <p class="lead">
-                        <a href="https://github.com/Soyeon-Baik/craigslist">Go to GitHub</a>
+                        <h2>To see code from GitHub</h2>
+                        <!--<p class="lead">-->
+                        <a href="https://github.com/Soyeon-Baik/craigslist">Click here</a>
                       </font></p>
                       <br> <br>
                 </div>
